# dataset-schema-registry

./: .gitignore  404.html  README.md  dataset_registry.json  generate_coverage.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: request_schema.yaml
.github/workflows/: gh-page.yaml  validate-pr-schemas.yaml
dataset-coverage/: index.html
dev-scripts/: README.md  create_scripted_schemas.py  create_spontaneous_schemas.py  fetch_cv_datasets.py  scripted_ids.json  spontaneous_ids.json
docs/: dataset-coverage.md  dataset_registry.json  index.md
registry/cmhkl8z2a007rnr07p9bm5kmz/: schema.yaml
registry/cmhpahaib00d8mk07ely2m8wh/: schema.yaml
registry/cmi7mgbam000bnx074097g2yg/: schema.yaml
registry/cmid3cyuy00gnnv07mo54373n/: schema.yaml
registry/cmid4ekjn00b8nu07xonhj0x8/: schema.yaml
registry/cmid4ir9100bgnu07du03svuc/: schema.yaml
registry/cmid4jner00hnnv072tkwlbps/: schema.yaml
registry/cmid4vszk00hrnv07ljzu2xsa/: schema.yaml
registry/cmid4wbrc00hvnv07e448rwv3/: schema.yaml
registry/cmihkoth10246md07dtojxehg/: schema.yaml
registry/cmihqro9h0238o207fgg5cmf6/: schema.yaml
registry/cmihtsewu023so207xot1iqqw/: schema.yaml
registry/cmiq2s3q5000fo207k9g6g7ou/: DO_NOT_REMOVE.md  schema.yaml
registry/cmiugmupp01etmf07h89hfpir/: schema.yaml
registry/cmiugnlxi01c5nv07yt3kxwhx/: schema.yaml
registry/cmiugo0h501exmf073drr56rr/: schema.yaml
registry/cmiugoh1u01c9nv07x7i2t25c/: schema.yaml
registry/cmiui8v3101cpnv074qwggdsj/: schema.yaml
registry/cmiuimd7e01fimf072njn3mbb/: schema.yaml
registry/cmiujt8r401d2nv07avt6446s/: schema.yaml
registry/cmiup5wqw01hlmf074qy07b80/: schema.yaml
registry/cmiup9hrx01hsmf074vi5iqgz/: schema.yaml
search/: search_index.json
(+1109 files in other folders)
