[build-system]
requires = ["uv_build >= 0.7.19, < 0.9.0"]
build-backend = "uv_build"

[project]
name = "dataset-schema-registry"
version = "0.1.0"
dependencies = [
  "requests>=2.28",
  "datacollective>=0.4.5",
  "PyYAML",
]
authors = [
    { name="Mozilla Data Collective", email="mozilladatacollective@mozillafoundation.org"},
]
description = "The registry for dataset schemas used by the Mozilla Data Collective."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"
license-files = ["LICENSE*"]

[dependency-groups]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/Mozilla-Data-Collective/dataset-schema-registry"
Documentation = "https://Mozilla-Data-Collective.github.io/dataset-schema-registry/"
